--- a/Src/WebAppStudy.Service/WebApiStudy.Service.csproj
+++ b/Src/WebAppStudy.Service/WebApiStudy.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WebApiStudy.Common.Core\WebApiStudy.Common.Core.csproj" />
     <ProjectReference Include="..\WebApiStudy.Dtos\WebApiStudy.Dtos.csproj" />
   </ItemGroup>
